--- a/Learn_App/Learn_App.csproj
+++ b/Learn_App/Learn_App.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ClosedXML" Version="0.102.3" />
     <PackageReference Include="Guna.UI2.WinForms" Version="2.0.4.6" />
   </ItemGroup>
 
